InsuranceOrg/force-app/main/default/objects/vlocity_ins__PromotionIncludedProduct__c/vlocity_ins__PromotionIncludedProduct__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Use Promotion Item instead.</description>
    <label>Promotion Included Product</label>
    <nameField>
        <label>Promotion Included Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Included Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>