InsuranceOrg/force-app/main/default/objects/vlocity_ins__PromotionIncludedProduct__c/fields/vlocity_ins__PromotionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PromotionId__c</fullName>
    <label>Promotion</label>
    <referenceTo>vlocity_ins__Promotion__c</referenceTo>
    <relationshipLabel>Promotion Included Products</relationshipLabel>
    <relationshipName>PromotionIncludedProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>