InsuranceOrg/force-app/main/default/objects/vlocity_ins__PromotionIncludedProduct__c/fields/vlocity_ins__Quantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>